# poc-api-template

./: README.md  docker-compose.yml  pyproject.toml
app/: config.py
app/api/: dependencies.py  main.py
app/api/v1/: health.py  schema.py
app/cmd/: main.py
app/infra/db/: conn.py
