[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Pavel Bazin", email = "pvlbzn@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.0",
    "pydantic>=2.12.3",
    "ruff>=0.14.3",
    "uvicorn>=0.38.0",
]


[project.scripts]
dev = "app.cmd.main:run"


[tool.uv.build-backend]
module-name = "app"
module-root = ""


[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
